# micropython-memory-profiler

./: .gitignore  .pre-commit-config.yaml  README.md  mem_dump.py  package.json  pyproject.toml
.github/workflows/: run_tests.yml
examples/: README.md  app1.py  example1.py
rendering_tools/: README.md  mem_usage_render.py  pyproject.toml
rendering_tools/mem_usage_parser/: __init__.py  frame_parser.py
rendering_tools/tests/: frame_parser_test.py
